--- a/emacs/.config/emacs/config.org
+++ b/emacs/.config/emacs/config.org
@@ -1,6 +1,6 @@
-#+TITLE: DT's GNU Emacs Config
-#+AUTHOR: Derek Taylor (DT)
-#+DESCRIPTION: DT's personal Emacs config.
+#+TITLE: GNU Emacs Settings
+#+AUTHOR: Jim Greer
+#+DESCRIPTION: Customized Emacs, from DistroTube & System Crafters
 #+STARTUP: showeverything
 #+OPTIONS: toc:2
 
@@ -9,19 +9,26 @@
   - [[#elpaca-package-manager][Elpaca Package Manager]]
   - [[#load-evil-mode][Load Evil Mode]]
   - [[#general-keybindings][General Keybindings]]
-- [[#fonts][FONTS]]
+- [[#theme-icons--fonts][THEME, ICONS & FONTS]]
+  - [[#them][Them]]
+  - [[#icons-for-dired-etc][Icons for dired, etc]]
   - [[#setting-the-font-face][Setting the Font Face]]
   - [[#zooming-inout][Zooming In/Out]]
 - [[#graphical-user-interface-tweaks][GRAPHICAL USER INTERFACE TWEAKS]]
-  - [[#disable-menubar-toolbars-and-scrollbars][Disable Menubar, Toolbars and Scrollbars]]
+  - [[#turn-off-startup-message-set-visual-bell][Turn off startup message, set visual bell]]
+  - [[#set-frame-widthheighth][Set Frame width/heighth]]
+  - [[#disable-menubar-toolbars-tooltips-and-scrollbars-and-set-fringe][Disable Menubar, Toolbars Tooltips, and Scrollbars, and set fringe]]
   - [[#display-line-numbers-and-truncated-lines][Display Line Numbers and Truncated Lines]]
+- [[#ivy-counsel][IVY (COUNSEL)]]
 - [[#org-mode][ORG MODE]]
   - [[#enabling-table-of-contents][Enabling Table of Contents]]
   - [[#enabling-org-bullets][Enabling Org Bullets]]
-  - [[#disable-electric-indent][Disable Electric Indent]]
+  - [[#enable-electric-indent][Enable Electric Indent]]
   - [[#source-code-block-tag-expansion][Source Code Block Tag Expansion]]
+- [[#rainbow-mode][RAINBOW MODE]]
 - [[#reload-emacs][RELOAD EMACS]]
 - [[#sudo-edit][SUDO EDIT]]
+- [[#git][GIT]]
 - [[#which-key][WHICH-KEY]]
 
 * IMPORTANT PROGRAMS TO LOAD FIRST
@@ -112,87 +119,132 @@
 
 ** General Keybindings
 #+begin_src emacs-lisp
-(use-package general
-  :config
-  (general-evil-setup)
+  ;;(print "General Keybindings")
+    (use-package general
+	:config
+	  (general-evil-setup)
 
-  ;; set up 'SPC' as the global leader key
-  (general-create-definer dt/leader-keys
-    :states '(normal insert visual emacs)
-    :keymaps 'override
-    :prefix "SPC" ;; set leader
-    :global-prefix "M-SPC") ;; access leader in insert mode
+	  ;; set up 'SPC' as the global leader key
+	  ;;(print "setup Keybindings")
+	  (general-create-definer jg/leader-keys
+	    :states '(normal insert visual emacs)
+	    :keymaps 'override
+	    :prefix "SPC" ;; set leader
+	    :global-prefix "M-SPC") ;; access leader in insert mode
 
-  (dt/leader-keys
-    "." '(find-file :wk "Find file")
-    "f c" '((lambda () (interactive) (find-file "~/.config/emacs/config.org")) :wk "Edit emacs config")
-    "TAB TAB" '(comment-line :wk "Comment lines"))
+	  ;;(print "find Keybindings")
+	  (jg/leader-keys
+	    "." '(find-file :wk "Find file")
+	    "f c" '((lambda () (interactive) (find-file "~/.config/emacs/config.org")) :wk "Edit emacs config")
+	    "TAB TAB" '(comment-line :wk "Comment lines"))
 
-  (dt/leader-keys
-    "b" '(:ignore t :wk "buffer")
-    "b b" '(switch-to-buffer :wk "Switch buffer")
-    "b i" '(ibuffer :wk "Ibuffer")
-    "b k" '(kill-this-buffer :wk "Kill this buffer")
-    "b n" '(next-buffer :wk "Next buffer")
-    "b p" '(previous-buffer :wk "Previous buffer")
-    "b r" '(revert-buffer :wk "Reload buffer"))
+	  ;; Working with buffers
+	  ;;(print "buffer Keybindings")
+	  (jg/leader-keys
+	    "b" '(:ignore t :wk "buffer")
+	    "b b" '(switch-to-buffer :wk "Switch buffer")
+	    "b i" '(ibuffer :wk "Ibuffer")
+	    "b k" '(kill-this-buffer :wk "Kill this buffer")
+	    "b n" '(next-buffer :wk "Next buffer")
+	    "b p" '(previous-buffer :wk "Previous buffer")
+	    "b r" '(revert-buffer :wk "Reload buffer"))
 
-  (dt/leader-keys
-    "e" '(:ignore t :wk "Evaluate")    
-    "e b" '(eval-buffer :wk "Evaluate elisp in buffer")
-    "e d" '(eval-defun :wk "Evaluate defun containing or after point")
-    "e e" '(eval-expression :wk "Evaluate and elisp expression")
-    "e l" '(eval-last-sexp :wk "Evaluate elisp expression before point")
-    "e r" '(eval-region :wk "Evaluate elisp in region")) 
+	  ;; Working with elisp
+	  ;;(print "elisp Keybindings")
+	  (jg/leader-keys
+	    "e" '(:ignore t :wk "Evaluate")    
+	    "e b" '(eval-buffer :wk "Evaluate elisp in buffer")
+	    "e d" '(eval-defun :wk "Evaluate defun containing or after point")
+	    "e e" '(eval-expression :wk "Evaluate and elisp expression")
+	    "e l" '(eval-last-sexp :wk "Evaluate elisp expression before point")
+	    "e r" '(eval-region :wk "Evaluate elisp in region")
+	    "e s" '(eshell :wk "Eshell")) 
 
-   (dt/leader-keys
-    "h" '(:ignore t :wk "Help")
-    "h f" '(describe-function :wk "Describe function")
-    "h v" '(describe-variable :wk "Describe variable")
-    ;;"h r r" '((lambda () (interactive) (load-file "~/.config/emacs/init.el")) :wk "Reload emacs config"))
-    "h r r" '(reload-init-file :wk "Reload emacs config"))
+	   ;; Help system
+	  ;;(print "Help Keybindings")
+	   (jg/leader-keys
+	    "h" '(:ignore t :wk "Help")
+	    "h f" '(describe-function :wk "Describe function")
+	    "h v" '(describe-variable :wk "Describe variable")
+	    "h r r" '(reload-init-file :wk "Reload emacs config"))
 
-   (dt/leader-keys
-    "t" '(:ignore t :wk "Toggle")
-    "t l" '(display-line-numbers-mode :wk "Toggle line numbers")
-    "t t" '(visual-line-mode :wk "Toggle truncated lines"))
-)
+	  ;;(print "Toggle Keybindings")
+	   (jg/leader-keys
+	    "t" '(:ignore t :wk "Toggle")
+	    "t l" '(display-line-numbers-mode :wk "Toggle line numbers")
+	    "t t" '(visual-line-mode :wk "Toggle truncated lines")
+	    "t v" '(vterm-toggle :wk "Toggle vterm"))
 
+	  ;;(print "windows Keybindings")
+	   (jg/leader-keys
+	     "w" '(:ignore t :wk "Windows")
+	      ;; Window splits
+	      "w c" '(evil-window-delete :wk "Close window")
+	      "w n" '(evil-window-new :wk "New window")
+	      "w s" '(evil-window-split :wk "Horizontal split window")
+	      "w v" '(evil-window-vsplit :wk "Vertical split window")
+	      ;; Window motions
+	      "w h" '(evil-window-left :wk "Window left")
+	      "w j" '(evil-window-down :wk "Window down")
+	      "w k" '(evil-window-up :wk "Window up")
+	      "w l" '(evil-window-right :wk "Window right")
+	      "w w" '(evil-window-next :wk "Goto next window")
+	      ;; Move Windows
+	      "w H" '(buf-move-left :wk "Buffer move left")
+	      "w J" '(buf-move-down :wk "Buffer move down")
+	      "w K" '(buf-move-up :wk "Buffer move up")
+	      "w L" '(buf-move-right :wk "Buffer move right")))
 #+end_src
 
 
-* FONTS
-Defining the various fonts that Emacs will use.
+* THEME, ICONS & FONTS
+Defining the them, icons & fonts that Emacs will use.
+
+** Them
+#+begin_src emacs-lisp
+  (load-theme 'modus-vivendi t)
+#+end_src
+
+** Icons for dired, etc
+#+begin_src emacs-lisp
+  (use-package all-the-icons
+    :ensure t
+    :if (display-graphic-p))
+
+  (use-package all-the-icons-dired
+    :hook (dired-mode . (lambda () (all-the-icons-dired-mode t))))
+#+end_src
 
 ** Setting the Font Face
 #+begin_src emacs-lisp
-  (set-face-attribute 'default nil
-    :font "JetBrains Mono"
-    :height 110
-    :weight 'medium)
-  (set-face-attribute 'variable-pitch nil
-    :font "Ubuntu"
-    :height 120
-    :weight 'medium)
-  (set-face-attribute 'fixed-pitch nil
-    :font "JetBrains Mono"
-    :height 110
-    :weight 'medium)
-  ;; Makes commented text and keywords italics.
-  ;; This is working in emacsclient but not emacs.
-  ;; Your font must have an italic face available.
-  (set-face-attribute 'font-lock-comment-face nil
-    :slant 'italic)
-  (set-face-attribute 'font-lock-keyword-face nil
-    :slant 'italic)
+  ;;(print "Fonts")
+    (set-face-attribute 'default nil
+      :font "JetBrains Mono"
+      :height 110
+      :weight 'medium)
+    (set-face-attribute 'variable-pitch nil
+      :font "Ubuntu"
+      :height 120
+      :weight 'medium)
+    (set-face-attribute 'fixed-pitch nil
+      :font "JetBrains Mono"
+      :height 110
+      :weight 'medium)
+    ;; Makes commented text and keywords italics.
+    ;; This is working in emacsclient but not emacs.
+    ;; Your font must have an italic face available.
+    (set-face-attribute 'font-lock-comment-face nil
+      :slant 'italic)
+    (set-face-attribute 'font-lock-keyword-face nil
+      :slant 'italic)
 
-  ;; This sets the default font on all graphical frames created after restarting Emacs.
-  ;; Does the same thing as 'set-face-attribute default' above, but emacsclient fonts
-  ;; are not right unless I also add this method of setting the default font.
-  (add-to-list 'default-frame-alist '(font . "JetBrains Mono-11"))
+    ;; This sets the default font on all graphical frames created after restarting Emacs.
+    ;; Does the same thing as 'set-face-attribute default' above, but emacsclient fonts
+    ;; are not right unless I also add this method of setting the default font.
+    (add-to-list 'default-frame-alist '(font . "JetBrains Mono-11"))
 
-  ;; Uncomment the following line if line spacing needs adjusting.
-  (setq-default line-spacing 0.12)
+    ;; Uncomment the following line if line spacing needs adjusting.
+    (setq-default line-spacing 0.12)
 
 #+end_src
 
@@ -210,17 +262,74 @@ You can use the bindings CTRL plus =/- for zooming in/out.  You can also use CTR
 * GRAPHICAL USER INTERFACE TWEAKS
 Let's make GNU Emacs look a little better.
 
-** Disable Menubar, Toolbars and Scrollbars
+** Turn off startup message, set visual bell
 #+begin_src emacs-lisp
-(menu-bar-mode -1)
-(tool-bar-mode -1)
-(scroll-bar-mode -1)
+  (setq inhibit-startup-message t)
+  (setq visible-bell t)
+#+end_src
+
+** Set Frame width/heighth
+#+begin_src emacs-lisp
+  (setq default-frame-alist
+    '((top . 25) (left . 275) (width . 125) (height . 60)))
+#+end_src
+
+
+** Disable Menubar, Toolbars Tooltips, and Scrollbars, and set fringe
+#+begin_src emacs-lisp
+  (menu-bar-mode -1)                  ; Disable menubar
+  (tool-bar-mode -1)                  ; Disable toolbar
+  (tooltip-mode -1)                   ; Disable tooltips
+  (scroll-bar-mode -1)                ; Disable visible scrollbar
+  (set-fringe-mode 10)                ; Add spacing around fringe
 #+end_src
 
 ** Display Line Numbers and Truncated Lines
 #+begin_src emacs-lisp
 (global-display-line-numbers-mode 1)
 (global-visual-line-mode t)
+#+end_src
+
+* IVY (COUNSEL)
++ Ivy, a generic completion mechanism for Emacs.
++ Counsel, a collection of Ivy-enhanced versions of common Emacs commands.
++ Ivy-rich allows us to add descriptions alongside the commands in M-x.
+
+#+begin_src emacs-lisp
+    (use-package counsel
+      :after ivy
+      :config (counsel-mode))
+
+    (use-package ivy
+      :bind
+      ;; ivy-resume resumes the last Ivy-based completion.
+      (("C-c C-r" . ivy-resume)
+       ("C-x B" . ivy-switch-buffer-other-window))
+      :custom
+      (setq ivy-use-virtual-buffers t)
+      (setq ivy-count-format "(%d/%d) ")
+      (setq enable-recursive-minibuffers t)
+      :config
+      (ivy-mode))
+
+    (use-package all-the-icons-ivy-rich
+      :ensure t
+      :init (all-the-icons-ivy-rich-mode 1))
+
+    (use-package ivy-rich
+      :after ivy
+      :ensure t
+      :init (ivy-rich-mode 1) ;; this gets us descriptions in M-x.
+      :custom
+      (ivy-rich-ivy-path-style 'abbrev
+       ivy-virtual-abbreviate 'full
+       ivy-rich-switch-buffer-align-virtual-buffer t))
+  ;;ivy-virtual-abbreviate 'full
+       ;;ivy-rich-switch-buffer-align-virtual-buffer t
+       ;;ivy-rich-path-style 'abbrev)
+      ;;:config
+      ;;(ivy-set-display-transformer 'ivy-switch-buffer
+       ;;                            'ivy-rich-switch-buffer-transformer))
 #+end_src
 
 * ORG MODE
@@ -240,11 +349,11 @@ Org-bullets gives us attractive bullets rather than asterisks.
   (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1)))
 #+end_src
 
-** Disable Electric Indent
+** Enable Electric Indent
 Org mode source blocks have some really weird and annoying default indentation behavior.  I think this has to do with electric-indent-mode, which is turned on by default in Emacs.  So let's turn it OFF!
 
 #+begin_src emacs-lisp
-(electric-indent-mode -1)
+(electric-indent-mode t)
 #+end_src
 
 ** Source Code Block Tag Expansion
@@ -268,6 +377,13 @@ Org-tempo is not a separate package but a module within org that can be enabled.
 (require 'org-tempo)
 #+end_src
 
+* RAINBOW MODE
+#+begin_src emacs-lisp 
+  (use-package rainbow-mode
+    :hook org-mode prog-mode)
+#+end_src
+
+
 * RELOAD EMACS
 This is just an example of how to create a simple function in Emacs.  Use this function to reload Emacs after adding changes to the config.  Yes, I am loading the user-init-file twice in this function, which is a hack because for some reason, just loading the user-init-file once does not work properly.
 
@@ -278,15 +394,22 @@ This is just an example of how to create a simple function in Emacs.  Use this f
   (load-file user-init-file))
 #+end_src
 
+
 * SUDO EDIT
 [[https://github.com/nflath/sudo-edit][sudo-edit]] gives us the ability to open files with sudo privileges or switch over to editing with sudo privileges if we initially opened the file without such privileges.
 
 #+begin_src emacs-lisp
 (use-package sudo-edit
   :config
-    (dt/leader-keys
+    (jg/leader-keys
       "fu" '(sudo-edit-find-file :wk "Sudo find file")
       "fU" '(sudo-edit :wk "Sudo edit file")))
+#+end_src
+
+* GIT
+#+begin_src emacs-lisp
+  (use-package magit
+    :ensure t)
 #+end_src
 
 * WHICH-KEY
